# sdk-rs

./: Cargo.toml  README.md
src/: auth.rs  client.rs  debug.rs  driver.rs  errors.rs  export.rs  homescript.rs  lib.rs  power.rs  request.rs  room.rs  version.rs
src/hms/: crud.rs  exec.rs  mod.rs
