[package]
name = "smarthome-sdk-rs"
description = "A Rust client-library which makes communication with the Smarthome server easy"
version = "0.8.0"
license = "GPL-2.0-only"
repository = "https://github.com/smarthome-go/sdk-rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
reqwest = { version = "0.11.12", features = [
  "json",
  "rustls-tls",
], default-features = false }
semver = "1.0.14"
serde = { version = "1.0.147", features = ["derive"] }
url = "2.3.1"

[dev-dependencies]
tokio = {version ="1.21.2", features=["full"]}
