[package]
name = "smarthome-sdk-rs"
version = "0.12.1"
edition = "2021"
license = "GPL-2.0-only"
repository = "https://github.com/smarthome-go/sdk-rs"
description = "A Rust client-library which makes communication with the Smarthome server easy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
reqwest = { version = "0.11.20", features = ["json", "rustls-tls"], default-features = false }
semver = "1.0.18"
serde = { version = "1.0.188", features = ["derive"] }
url = "2.4.1"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
